--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng build --configuration production --output-path=dist/MatePlus && npx angular-cli-ghpages --dir=dist/MatePlus"
   },
   "private": true,
   "dependencies": {
